# java_winlaunch

./: CMakeLists.txt  README.md
resources/: launcher.exe.manifest  resources.rc
src/: launcher.cpp  utils.cpp  utils.hpp
